# RC-ros2

./: .docker_setup_bashrc.user.sh  .gitattributes  .gitignore  README.md  configure_system.sh  controllers_out.txt  docker_ps.txt  framebuffer-setup.service  frames_2026-01-06_08.31.35.gv  frames_2026-01-08_12.34.51.gv  frames_2026-01-16_09.54.02.gv  frames_2026-01-17_08.59.40.gv  frames_2026-01-17_09.03.16.gv  frames_2026-01-17_09.22.07.gv  realsense_repos.repos  source_dev.sh  start_workspace.sh  templog  test_ros.sh  test_ros_control.sh  test_ros_output.txt  test_ros_topics.sh  topic_info.txt  workspace.repos
docker/: .isaac_ros_common-config  .isaac_ros_dev-dockerargs  Dockerfile copy.teleopros2  Dockerfile.rccarauto  Dockerfile.teleopros2
docker/scripts/: build-librealsense.sh  hotplug-realsense.sh  install-realsense-dependencies.sh
docker/udev_rules/: 99-realsense-libusb-custom.rules
scripts/: entry_point.sh  isaac_ros.json  vlm_brain.py
src/RCCar/pca9685_hardware_interface/: CMakeLists.txt  TestPCA9685ESC.py  TestPCA9685ServoESC.py
src/RCCar/pca9685_hardware_interface/include/pca9685_hardware_interface/: pca9685_comm.h  pca9685_system.hpp
src/RCCar/pca9685_hardware_interface/src/: pca9685_system.cpp  pwm_motor_controller.cpp
src/RCCar/rc_hardware_control/: CMakeLists.txt  package.xml
src/RCCar/rc_hardware_control/config/: disable_shm.xml  joint_group_velocity_controller.yaml  my_custom_nav2_params.yaml  realsense_basic.rviz  realsense_visual_slam.rviz  steer_bot_hardware.yaml
src/RCCar/rc_hardware_control/description/: description.urdf.xacro
src/RCCar/rc_hardware_control/launch/: joint_group_velocity_example.launch.py  rccarauto.launch.py  realsense_basic.launch.py  realsense_d435i.launch.py  realsense_ess.launch.py  realsense_visual_slam.launch.py  steering_tracking_example.launch.py
src/RCCar/rc_hardware_control/scripts/: checksync.py  cmd_vel_logger.py  depth_check.py  goal_pose_relay.py  stereo_sync_republisher.py  test_bicycle.py  test_steering_tracking.py  vlm_brain.py
src/TeleOpROS2/.git_bak/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
src/TeleOpROS2/.git_bak/logs/refs/heads/: main
src/TeleOpROS2/.git_bak/objects/pack/: pack-79c322aa08c443a76c7bab0f726d136fdcd68598.idx
src/TeleOpROS2/.git_bak/refs/remotes/origin/: main
src/TeleOpROS2/jetson_control/: steeringAndDriveHyric.py
src/isaac_ros_realsense_control/: CMakeLists.txt  package.xml
src/isaac_ros_realsense_control/config/: realsense_config.yaml
src/isaac_ros_realsense_control/launch/: ess_only.launch.py  nvblox.launch.py  rccarauto.launch.py  realsense_basic.launch.py  realsense_ess.launch.py  realsense_visual_slam.launch.py
src/isaac_ros_realsense_control/scripts/: frame_rename.py
src/pca9685_ros2_control/: README.md
src/pca9685_ros2_control/pca9685_hardware_interface/: TestPCA9685ESC.py  TestPCA9685ServoESC copy.py  TestPCA9685ServoESC.py
src/pca9685_ros2_control/pca9685_hardware_interface/include/pca9685_hardware_interface/: pca9685_system.hpp  pwm_motor_controller.hpp
src/pca9685_ros2_control/pca9685_hardware_interface/src/: pca9685_system.cpp  pwm_motor_controller.cpp
src/pca9685_ros2_control/rc_hardware_control/: CMakeLists.txt  package.xml
src/pca9685_ros2_control/rc_hardware_control/config/: my_custom_nav2_params.yaml  steer_bot_hardware.yaml
src/pca9685_ros2_control/rc_hardware_control/description/: description.urdf.xacro
src/pca9685_ros2_control/rc_hardware_control/launch/: basic_steering_traction.launch.py  launch.py  steering_tracking_example.launch.py  test_motors.launch.py
src/pca9685_ros2_control/rc_hardware_control/scripts/: led_off.py  test_ackermann.py  test_bicycle.py
src/ros2_shared/.git_bak/: FETCH_HEAD  config  index  packed-refs
src/ros2_shared/.git_bak/logs/: HEAD
src/ros2_shared/.git_bak/logs/refs/heads/: master
src/ros2_shared/.git_bak/objects/pack/: pack-3281eeebccb2df3a9bfd36c114b255efe47a77e3.idx
src/ros2_shared/.git_bak/refs/heads/: master
(+2 files in other folders)
